--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <th>10:05-10:45</th>
                 </tr>
                 <tr>
-                    <th>His/Geo</th>
+                    <th>Geografia</th>
                     <th>Ingles</th>
                     <th>Lengua</th>
                     <th>Ingles</th>
@@ -66,7 +66,7 @@
                     <th>10:50-11:30</th>
                 </tr>
                 <tr>
-                    <th>Geo</th>
+                    <th>Geografia</th>
                     <th>Matematica</th>
                     <th>Lengua</th>
                     <th>Matematica</th>
@@ -74,12 +74,12 @@
                     <th>11:30-12:10</th>
                 </tr>
                 <tr>
-                    <th>Geo</th>
+                    <th>Geografia</th>
                     <th></th>
                     <th></th>
                     <th>Matematica</th>
                     <th>Teatro</th>
-                    <th>12:30-13:00</th>
+                    <th>12:20-13:00</th>
                 </tr>
                 <tr>
                     <th></th>
@@ -91,35 +91,35 @@
                 </tr>
                 <tr>
                     <th></th>
+                    <th></th>
+                    <th>Tecnologia</th>
+                    <th></th>
+                    <th></th>
+                    <th>14:00-14:40</th>
+                </tr>
+                <tr>
+                    <th></th>
+                    <th></th>
+                    <th>Tecnologia</th>
+                    <th></th>
+                    <th>Ed.Fisica H 14:30-15:30</th>
+                    <th>14:40-15:20</th>
+                </tr>
+                <tr>
+                    <th>Ed.Fisica H 15:05-16:05</th>
+                    <th>Ed.Fisica M 16-17</th>
+                    <th>Tecnologia</th>
+                    <th></th>
+                    <th></th>
+                    <th>15:30-16:10</th>
+                </tr>
+                <tr>
+                    <th></th>
                     <th>Taller</th>
                     <th></th>
                     <th>Taller</th>
-                    <th>Ed.Fisica H</th>
-                    <th>14:30-15:30</th>
-                </tr>
-                <tr>
-                    <th>Ed.Fisica H</th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th>15-16:05</th>
-                </tr>
-                <tr>
-                    <th></th>
-                    <th></th>
-                    <th>Ed.Fisica M</th>
-                    <th></th>
-                    <th></th>
-                    <th>16-17</th>
-                </tr>
-                <tr>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th>Ed.Fisica M</th>
-                    <th>17-18</th>
+                    <th>Ed.Fisica M 17-18</th>
+                    <th>16:10-19:00</th>
                 </tr>
             </table>
             <button class="danger_title"><h3>¡¡Avisos Importantes!!</h3></button>
@@ -127,6 +127,7 @@
             <p class="danger_zone"><b>(No hay avisos recientes por ahora)</b></p>
             <br>
             <button class="reclam_title"><h3>¿Tuviste algun problema? Confesate y reclamalo</h3></button>
+            <br>
             <h4 class="reclam_text"><b>¡Aviso! Los reclamos son completamente anonimos y no se revelara el nombre de la persona que reclamo.</b></h4>
             <form action="" id="contactForm">
                 <input class="input_name" type="text" placeholder="Nombre" name="name">
@@ -140,7 +141,7 @@
                 <button type="submit" class="submit" name="submit"><h3>Enviar</h3></button>
             </form>
             <a target="_blank" href="mailto:tobixx47@gmail.com" id="trucazo">mail</a>
-            <a target="_blank" class="Studios" href="https://ak47pitbull.github.io/47Studios/"><h1><47Studios/></h1></a>
+            <a target="_blank" class="Studios" href="https://ak47pitbull.github.io/47Studios/"><h3><47Studios/></h3></a>
       </div>
       <script src="script.js"></script>
 </body>
