--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <br>
             <p class="danger_zone"><b>(No hay avisos recientes por ahora)</b></p>
             <br>
-            <button id="notification" class="notifications"><p><b>Notificarme de Tareas</b></p></button>
+            <!-- <button id="notification" class="notifications"><p><b>Notificarme de Tareas</b></p></button> -->
             <br>
             <button class="reclam_title"><h3>¿Tuviste algun problema? Confesate y reclamalo</h3></button>
             <br>
@@ -146,6 +146,12 @@
             <a target="_blank" class="Studios" href="https://ak47pitbull.github.io/47Studios/"><h3><47Studios/></h3></a>
       </div>
       <script src="script.js"></script>
-      <script src="main.js"></script>
+      <!-- <script src="main.js"></script> -->
+      <script src="push.min.js"></script>
+      <script>
+        Push.create("No hay notificaciones recientes",{
+            body: "(Vacio)"
+        }); 
+      </script>
 </body>
 </html>
