--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </table>
             <button class="danger_title"><h3>¡¡Avisos Importantes!!</h3></button>
             <br>
-            <p class="danger_zone"><b>(No hay avisos recientes por ahora)</b></p>
+            <p class="danger_zone"><b>Preceptor:Fabian Bustos<br>Horarios se cambiaran en breve a los horarios correctos<br>Profesora de historia:Alejandra Herrmann<br>Profesora de Geografia:Emilia Gonsalez</b></p>
             <!-- <button id="notification" class="notifications"><p><b>Notificarme de Tareas</b></p></button> -->
             <br>
             <button class="reclam_title"><h3>¿Tuviste algun problema? Confesate y reclamalo</h3></button>
@@ -148,7 +148,7 @@
       <!-- <script src="main.js"></script> -->
       <script src="push.min.js"></script>
       <script>
-        Push.create("No hay notificaciones recientes",{
+        Push.create("Hay avisos nuevos en la pagina !!REVISAR!!",{
             body: "(Vacio)",
             icon: "fqwefeqf",
             timeout: "",
