1ºday_changes_info

--- a/index.html
+++ b/index.html
@@ -124,19 +124,13 @@
             </table>
             <button class="danger_title"><h3>¡¡Avisos Importantes!!</h3></button>
             <br>
-            <p class="danger_zone"><b>Preceptor:Fabian Bustos<br>Horarios se cambiaran en breve a los horarios correctos<br>Profesora de historia:Alejandra Herrmann<br>Profesora de Geografia:Emilia Gonsalez</b></p>
+            <p class="danger_zone"><b>Preceptor: Fabian Bustos<br>Horarios se cambiaran en breve a los horarios correctos<br>Profesora de historia: Alejandra Herrmann<br>Profesora de Geografia: Emilia Gonsalez<br>Pdfs a descargar:<br><a target="_blank" href="Pdf/CamScanner 03-19-2023 17.48.pdf">Cam Scanner</a><br><a target="_blank" href="Pdf/GUÍA N 1.pdf">Guia Nº1</a><br><a target="_blank" href="Pdf/Ubicación de Argentina.pdf">Ubicacion de Argentina</a><br><a target="_blank" href="Pdf/ESTADO, LÍMITES Y FRONTERAS.pdf">Estado Limites y Fronteras</a><br>Para mañana traer mapa politico<br>Se va a trabajar la unidad 1<br>en grupos de 5<br>De Ed.fisica y Taller no hay fecha definida aun.</b></p>
             <!-- <button id="notification" class="notifications"><p><b>Notificarme de Tareas</b></p></button> -->
             <br>
             <button class="reclam_title"><h3>¿Tuviste algun problema? Confesate y reclamalo</h3></button>
             <br>
             <h4 class="reclam_text"><b>¡Aviso! Los reclamos son completamente anonimos y no se revelara el nombre de la persona que reclamo.</b></h4>
             <form action="" id="contactForm">
-                <input required class="input_name" type="text" placeholder="Nombre" name="name">
-                <br>
-                <hr>
-                <input required class="input_email" type="text" placeholder="Email" name="email">
-                <br>
-                <hr>
                 <textarea required class="camp" type="text" placeholder="Confesion o Reclamo" name="camp"></textarea>
                 <br>
                 <button type="submit" class="submit" name="submit"><h3>Enviar</h3></button>
@@ -148,7 +142,7 @@
       <!-- <script src="main.js"></script> -->
       <script src="push.min.js"></script>
       <script>
-        Push.create("Hay avisos nuevos en la pagina !!REVISAR!!",{
+        Push.create("No hay notificaciones recientes",{
             body: "(Vacio)",
             icon: "fqwefeqf",
             timeout: "",
