--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </table>
             <button class="danger_title"><h3>¡¡Avisos Importantes!!</h3></button>
             <br>
-            <p class="danger_zone"><b>Preceptor: Fabian Bustos<br>Horarios se cambiaran en breve a los horarios correctos<br>Profesora de historia: Alejandra Herrmann<br>Profesora de Geografia: Emilia Gonsalez<br>Pdfs a descargar:<br><a target="_blank" href="Pdf/CamScanner 03-19-2023 17.48.pdf">Cam Scanner</a><br><a target="_blank" href="Pdf/GUÍA N 1.pdf">Guia Nº1</a><br><a target="_blank" href="Pdf/Ubicación de Argentina.pdf">Ubicacion de Argentina</a><br><a target="_blank" href="Pdf/ESTADO, LÍMITES Y FRONTERAS.pdf">Estado Limites y Fronteras</a><br>Para mañana traer mapa politico<br>Se va a trabajar la unidad 1<br>en grupos de 5<br>De Ed.fisica y Taller no hay fecha definida aun.</b></p>
+            <p class="danger_zone"><b>Preceptor: Fabian Bustos<br><br>Horarios: Se cambiaran en breve a los horarios correctos<br><br>Profesora de historia: Alejandra Herrmann<br><br>Profesora de Geografia: Emilia Gonsalez<br><br>Pdfs a descargar:<br><a target="_blank" href="Pdf/CamScanner 03-19-2023 17.48.pdf">Cam Scanner</a><br><a target="_blank" href="Pdf/GUÍA N 1.pdf">Guia Nº1</a><br><a target="_blank" href="Pdf/Ubicación de Argentina.pdf">Ubicacion de Argentina</a><br><a target="_blank" href="Pdf/ESTADO, LÍMITES Y FRONTERAS.pdf">Estado Limites y Fronteras</a><br><br>Para mañana traer mapa politico<br><br>Se comenzara a trabajar la unidad 1<br>Y habra una guia<br>especial que se<br>realizara en grupos de 5<br><br>De Ed.fisica y Taller no hay fecha definida aun<br><br>Se cambio de aula a el aula 40 del 2º Piso esquina caseros.</b></p>
             <!-- <button id="notification" class="notifications"><p><b>Notificarme de Tareas</b></p></button> -->
             <br>
             <button class="reclam_title"><h3>¿Tuviste algun problema? Confesate y reclamalo</h3></button>
@@ -142,10 +142,10 @@
       <!-- <script src="main.js"></script> -->
       <script src="push.min.js"></script>
       <script>
-        Push.create("No hay notificaciones recientes",{
-            body: "(Vacio)",
-            icon: "fqwefeqf",
-            timeout: "",
+        Push.create("!!Hay avisos nuevos que debes revisar de inmediato!!",{
+            body: "Se aviso de preceptores , guias , profesores , etc.",
+            icon: "",
+            timeout: "4000",
         }); 
       </script>
 </body>
