1ºDay_hours_change

--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
                     <th>10:05-10:45</th>
                 </tr>
                 <tr>
-                    <th>Geografia</th>
+                    <th>Historia</th>
                     <th>Ingles</th>
                     <th>Lengua</th>
-                    <th>Ingles</th>
+                    <th>Matematica</th>
                     <th>Teatro</th>
                     <th>10:50-11:30</th>
                 </tr>
                 <tr>
                     <th>Geografia</th>
-                    <th>Matematica</th>
+                    <th>Ingles</th>
                     <th>Lengua</th>
                     <th>Matematica</th>
                     <th>Teatro</th>
@@ -75,7 +75,7 @@
                 </tr>
                 <tr>
                     <th>Geografia</th>
-                    <th></th>
+                    <th>Geografia</th>
                     <th></th>
                     <th>Matematica</th>
                     <th>Teatro</th>
@@ -99,14 +99,14 @@
                 </tr>
                 <tr>
                     <th></th>
-                    <th></th>
+                    <th>Ed.Fisica H 15-16</th>
                     <th>Tecnologia</th>
                     <th></th>
                     <th>Ed.Fisica H 14:30-15:30</th>
                     <th>14:40-15:20</th>
                 </tr>
                 <tr>
-                    <th>Ed.Fisica H 15:05-16:05</th>
+                    <th></th>
                     <th>Ed.Fisica M 16-17</th>
                     <th>Tecnologia</th>
                     <th></th>
@@ -114,8 +114,8 @@
                     <th>15:30-16:10</th>
                 </tr>
                 <tr>
-                    <th></th>
                     <th>Taller</th>
+                    <th></th>
                     <th></th>
                     <th>Taller</th>
                     <th>Ed.Fisica M 17-18</th>
