--- a/index.html
+++ b/index.html
@@ -122,6 +122,109 @@
                     <th>16:10-19:00</th>
                 </tr>
             </table>
+            <button class="hour_button"><h3>Materias Y Profesores</h3></button>
+            <table border="1px" class="hour_table">
+                <tr>
+                    <th>Materias</th>
+                    <th>Profesores</th>
+                    <th>Suplentes</th>
+                </tr>
+                <tr>
+                    <th>Lengua</th>
+                    <th>Dominguez Gabriela</th>
+                    <th>Ale, Belen</th>
+                </tr>
+                <tr>
+                    <th>Matematica</th>
+                    <th>Bortot, Vilma</th>
+                    <th>Davila,Zulay</th>
+                </tr>
+                <tr>
+                    <th>Geografia</th>
+                    <th>Emilia,Gonzalez</th>
+                    <th>Ferra,Patricia</th>
+                </tr>
+                <tr>
+                    <th>Historia</th>
+                    <th>Herrmann,Alejandra</th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <th>Biologia</th>
+                    <th>Tejo,Patricia</th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <th>Fisica</th>
+                    <th>Pintor,Sandra</th>
+                    <th>Bustos,Ximena</th>
+                </tr>
+                <tr>
+                    <th>Quimica</th>
+                    <th>Kummel,Estela</th>
+                    <th>Natalia,Dibella</th>
+                </tr>
+                <tr>
+                    <th>Tecnologia</th>
+                    <th>Chaves,Sergio</th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <th>Ingles</th>
+                    <th>Espin,Caterina</th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <th>Teatro</th>
+                    <th>Zalazar,Sandra</th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <th>Orientacion Y Tutoria</th>
+                    <th>Chillemi,Romina</th>
+                    <th>Cordoba,Horacio</th>
+                </tr>
+                <tr>
+                    <th>Ed.Fisica H</th>
+                    <th>Montiveros Marcelo</th>
+                    <th>Juarez,Gonzalo</th>
+                </tr>
+                <tr>
+                    <th>Ed.Fisica M</th>
+                    <th>Jofre,Sandra</th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <th>Etica</th>
+                    <th>Chillemi,Romina</th>
+                    <th>Herrmann</th>
+                </tr>
+                <tr>
+                    <th>Dibujo Tecnico</th>
+                    <th>Seva,Javier</th>
+                    <th>Cuello,Elio</th>
+                </tr>
+                <tr>
+                    <th>Informatica</th>
+                    <th>Bueno,Liliana</th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <th>T.Electricidad</th>
+                    <th>Mercado,Pablo y Prreira Edgardo</th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <th>T.Estructuras y Mant.</th>
+                    <th>Cortes,Pedro,Carlos,Silva,Martinez</th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <th>Herreria Y Soldadura</th>
+                    <th>Abad , Javier, Delahaye, Marcos</th>
+                    <th></th>
+                </tr>
+            </table>
             <button class="danger_title"><h3>¡¡Avisos Importantes!!</h3></button>
             <br>
             <p class="danger_zone"><b>Lengua:<br><a href="Pdf/Muy Int. 10--heroinas- parcial 2.pdf" target="_blank">Imprimir pdf para trabajar mañana</a><br>Y llevar un cartelito (cartulina)<br>con su nombre para presentarse<br>con la profe mañana.<br><br>Ingles:<br>Traer para la clase que viene<br>realizada la hoja que se repartio<br>en clase.<br>Imprimir los pdfs de ingles<br>que paso miadosqui al grupo.<br><br>Geografia:<br>Traer guia 1 completa para el lunes<br>La unica excusa para no<br>hacerla es que no entiendan<br>algo.<br><br>Tutoria:<br>Comprar cuadernillo $560<br>Traer actividad 1 hecha para<br>la clase que viene.</b></p>
