--- a/index.html
+++ b/index.html
@@ -1,16 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-1NVZ80HNGW">
-</script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-1NVZ80HNGW');
-</script>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -166,8 +156,8 @@
                 </tr>
                 <tr>
                     <th>Fisica</th>
-                    <th>Pintor,Sandra</th>
                     <th>Bustos,Ximena</th>
+                    <th>Pintor,Sandra</th>
                 </tr>
                 <tr>
                     <th>Quimica</th>
@@ -176,7 +166,7 @@
                 </tr>
                 <tr>
                     <th>Tecnologia</th>
-                    <th>Chaves,Sergio</th>
+                    <th>Chirino,Cecilia</th>
                     <th></th>
                 </tr>
                 <tr>
@@ -237,7 +227,70 @@
             </table>
             <button class="danger_title"><h3>¡¡Avisos Importantes!!</h3></button>
             <br>
-            <p class="danger_zone"><b>Avisos:<br>Comprar cuaderno de comunicaciones<br>rojo.<br><br>Tutoria:<br>Comprar cuadernillo $560<br>Traer actividad 1 hecha para el 4 de<br>abril.<br><br>Geografia:<br>Traer Guia Nº2 hecha<br>(cada uno en su cuaderno).<br>La profe le pedira que respondan<br>las preguntas de las consignas<br>a los que estuvieron<br>hablando.<br><br>Dibujo tecnico no va debido a<br>operacion.<br>Matematica clase normal<br>Tecnologia hace paro<br>Informatica no tenemos<br>Quimica hace paro<br>Fisica no se sabe<br>Teatro no se sabe<br><br>Resumen Semanal:<br><br>Miercoles:<br><br>Matematica:<br>Traer la guia de repaso completa</b></p>
+            <p class="danger_zone"><b>Avisos:
+                <br>Comprar cuaderno de comunicaciones
+                <br>rojo.
+                <br><br>Geografia:
+                <br>La profe le pedira que respondan
+                <br>las preguntas de las consignas
+                <br>a los que estuvieron
+                <br>hablando.
+                <br><br>Cuadernillos a comprar:
+                <br>Tutoria
+                <br>Etica
+                <br>Historia
+                <br>Fisica
+                <br>Biologia
+                <br>Quimica
+                <br><br>Resumen Semanal:
+                <br><br>Lunes:
+                <br><br>Historia:
+                <br>Los que faltaron el lunes completen
+                <br>lo que se escribio en el pizarron.
+                <br>Cuadernillo de Historia
+                <br><br>Etica:
+                <br>Lo mismo que historia pero traer acti-
+                <br>vidades hechas.
+                <br><br>Geografia:
+                <br>Traer guia 2 hecha(cada uno en su cu-
+                <br>aderno).
+                <br><br>Martes:
+                <br><br>Lengua:
+                <br>Buscar diferencia entre imagen , foto
+                <br>y dibujo.
+                <br>Llevar biografia de Luis Borge
+                <br>Llevar actividades hechas.
+                <br><br>Dibujo Tecnico:
+                <br>Llevar lamina nº1 hecha.
+                <br><br>Ingles:
+                <br>Llevar actividades de la hoja hecha
+                <br>Traer impreso el pdf Unit 1
+                <br><br>Tutoria:
+                <br>Comprar cuadernillo $560
+                <br>Traer actividad 1 hecha
+                <br><br>Miercoles:
+                <br><br>Matematica:
+                <br>Traer guia de repaso completa
+                <br>Si tienen dudas no se queden con las
+                <br>dudas la profe las responden por si
+                <br>no entienden algo.
+                <br><br>Tecnologia:
+                <br>Dibujar 2 Sistemas Manuales con eleme-
+                <br>ntos y funcion.
+                <br><br>Jueves:
+                <br><br>Quimica:
+                <br>Traer cuadernillo de Quimica
+                <br>Traer actividades que se dieron en cl-
+                <br>ases hechas.
+                <br>Utiles a llevar:
+                <br>Cuaderno o Carpeta
+                <br>Tabla periodica
+                <br>Guarda Polvo(Solo practicas de labor-
+                <br>atorio).
+                <br><br>Viernes:
+                <br><br>Fisica:
+                <br><a target="_blank" href="Pdf/Fisica.jpeg">Tarea del viernes 1</a>
+                <br><a target="_blank" href="Pdf/Fisica2.jpeg">Tarea del viernes 2</a>.</b></p>
             <!-- <button id="notification" class="notifications"><p><b>Notificarme de Tareas</b></p></button> -->
             <br>
             <button class="reclam_title"><h3>¿Tuviste algun problema? Confesate y reclamalo</h3></button>
