--- a/index.html
+++ b/index.html
@@ -231,29 +231,22 @@
                 <br>Comprar cuaderno de comunicaciones
                 <br>rojo.
                 <br><br>Geografia:
-                <br>La profe le pedira que respondan
-                <br>las preguntas de las consignas
-                <br>a los que estuvieron
-                <br>hablando.
+                <br>La profe el dia lunes no viene
                 <br><br>Cuadernillos a comprar:
                 <br>Tutoria
                 <br>Etica
                 <br>Historia
-                <br>Fisica
+                <br>Fisica (Opcional)
                 <br>Biologia
                 <br>Quimica
                 <br><br>Resumen Semanal:
                 <br><br>Lunes:
                 <br><br>Historia:
-                <br>Los que faltaron el lunes completen
-                <br>lo que se escribio en el pizarron.
-                <br>Cuadernillo de Historia
+                <br>En grupos de 5 traer hechos las 3 co-
+                <br>nsignas dadas en clases hechas...
                 <br><br>Etica:
-                <br>Lo mismo que historia pero traer acti-
-                <br>vidades hechas.
-                <br><br>Geografia:
-                <br>Traer guia 2 hecha(cada uno en su cu-
-                <br>aderno).
+                <br>Leer la pagina 6 del cuadernillo y r-
+                <br>esponder las preguntas dadas en clase
                 <br><br>Martes:
                 <br><br>Lengua:
                 <br>Buscar diferencia entre imagen , foto
@@ -263,20 +256,19 @@
                 <br><br>Dibujo Tecnico:
                 <br>Llevar lamina nº1 hecha.
                 <br><br>Ingles:
-                <br>Llevar actividades de la hoja hecha
-                <br>Traer impreso el pdf Unit 1
+                <br>Llevar actividades dadas en clase
                 <br><br>Tutoria:
-                <br>Comprar cuadernillo $560
                 <br>Traer actividad 1 hecha
+                <br>Traer actividad 2 hecha
+                <br><br>Geografia:
+                <br>Practico de geografia hecho para el
+                <br>martes 11
                 <br><br>Miercoles:
                 <br><br>Matematica:
                 <br>Traer guia de repaso completa
                 <br>Si tienen dudas no se queden con las
                 <br>dudas la profe las responden por si
                 <br>no entienden algo.
-                <br><br>Tecnologia:
-                <br>Dibujar 2 Sistemas Manuales con eleme-
-                <br>ntos y funcion.
                 <br><br>Jueves:
                 <br><br>Quimica:
                 <br>Traer cuadernillo de Quimica
