--- a/index.html
+++ b/index.html
@@ -230,60 +230,53 @@
             <p class="danger_zone"><b>Avisos:
                 <br>Comprar cuaderno de comunicaciones
                 <br>rojo.
-                <br><br>Geografia:
-                <br>La profe el dia lunes no viene
-                <br><br>Cuadernillos a comprar:
-                <br>Tutoria
-                <br>Etica
-                <br>Historia
-                <br>Fisica (Opcional)
-                <br>Biologia
-                <br>Quimica
+                <br><br>Matematica:
+                <br>Imprimir y firmar el contrato pedagogico
+                <br><br>Traer firmada en el cuaderno de com-
+                <br>unicaciones la nota de teatro.(El dia lu-
+                <br>nes el delegado les consigue la nota).
                 <br><br>Resumen Semanal:
                 <br><br>Lunes:
                 <br><br>Historia:
                 <br>En grupos de 5 traer hechos las 3 co-
                 <br>nsignas dadas en clases hechas...
-                <br><br>Etica:
-                <br>Leer la pagina 6 del cuadernillo y r-
-                <br>esponder las preguntas dadas en clase
+                <br><br>Taller grupo 1:
+                <br>Traer cables pedidos en clase.
                 <br><br>Martes:
                 <br><br>Lengua:
-                <br>Buscar diferencia entre imagen , foto
-                <br>y dibujo.
-                <br>Llevar biografia de Luis Borge
-                <br>Llevar actividades hechas.
+                <br>Llevar hecho el trabajo Practico
+                <br><a target="_blank" href="Pdf/Trabajo Práctico 3ro 1ra LENGUA EIDFS.pdf">Descargar Trabajo Practico</a>
                 <br><br>Ingles:
-                <br>Llevar actividades dadas en clase
+                <br>Llevar terminada la guia dada la clase anterior.
                 <br><br>Tutoria:
-                <br>Traer actividad 1 hecha
                 <br>Traer actividad 2 hecha
-                <br><br>Geografia:
-                <br>Practico de geografia hecho para el
-                <br>martes 11
+                <br>Y traer de la pagina 8 la guia 3 completa.
                 <br><br>Miercoles:
                 <br><br>Dibujo Tecnico:
-                <br>Llevar lamina nº1 hecha.
+                <br>Tratar de empezar la lamina nº2
                 <br><br>Matematica:
-                <br>Traer guia de repaso completa
-                <br>Si tienen dudas no se queden con las
-                <br>dudas la profe las responden por si
-                <br>no entienden algo.
+                <br>Traer impresa la guia nº1 de matematica
+                <br><br>Tecnologia:
+                <br>Llevar hecha la actividad en grupos de 5
+                <br>que trata sobre sensores
                 <br><br>Jueves:
+                <br><br>Informatica:
+                <br>Traer resueltas las actividades dadas has-
+                <br>ta el punto 6.
+                <br><a target="_blank" href="Pdf/Guía Introduccion 3ro Div 3ra-4ta-6ta.pdf">Guia de Introduccion</a>
+                <br><a target="_blank" href="Pdf/Celda Activa-Rango de Celdas 3ro Div 3ra-4ta-6ta.pdf">Celda Activa-Rango de Celdas</a>
+                <br><a target="_blank" href="Pdf/Tipo de Datos 3ro Div 3ra-4ta-6ta.pdf">Tipos de Datos</a>
                 <br><br>Quimica:
-                <br>Traer cuadernillo de Quimica
                 <br>Traer actividades que se dieron en cl-
                 <br>ases hechas.
-                <br>Utiles a llevar:
-                <br>Cuaderno o Carpeta
-                <br>Tabla periodica
-                <br>Guarda Polvo(Solo practicas de labor-
-                <br>atorio).
+                <br><br>Taller Grupo 2:
+                <br>Llevar gafas de seguridad.
                 <br><br>Viernes:
-                <br><br>Fisica:
-                <br><a target="_blank" href="Pdf/Fisica.jpeg">Tarea del viernes 1</a>
-                <br><a target="_blank" href="Pdf/Fisica2.jpeg">Tarea del viernes 2</a>.</b></p>
+                <br><br>Teatro:
+                <br>Traer obra de teatro pedida en clase-
+                <br>hecha.</b></p>
             <!-- <button id="notification" class="notifications"><p><b>Notificarme de Tareas</b></p></button> -->
+            <a target="_blank" href="https://fotocomercio.mitiendanube.com"><button class="foto_title"><h3>Ir a fotocopiadora</h3></button></a>
             <br>
             <button class="reclam_title"><h3>¿Tuviste algun problema? Confesate y reclamalo</h3></button>
             <br>
