Final_Week_Nº5_beta

--- a/index.html
+++ b/index.html
@@ -230,51 +230,52 @@
             <p class="danger_zone"><b>Avisos:
                 <br>Comprar cuaderno de comunicaciones
                 <br>rojo.
-                <br><br>Matematica:
-                <br>Imprimir y firmar el contrato pedagogico
-                <br><br>Traer firmada en el cuaderno de com-
-                <br>unicaciones la nota de teatro.(El dia lu-
-                <br>nes el delegado les consigue la nota).
+                <br>Lunes Feriado
+                <br>Martes entramos a las 9:20 porque no vi-
+                <br>ene la profe de biologia
                 <br><br>Resumen Semanal:
-                <br><br>Lunes:
-                <br><br>Historia:
-                <br>En grupos de 5 traer hechos las 3 co-
-                <br>nsignas dadas en clases hechas...
-                <br><br>Taller grupo 1:
-                <br>Traer cables pedidos en clase.
                 <br><br>Martes:
                 <br><br>Lengua:
-                <br>Llevar hecho el trabajo Practico
-                <br><a target="_blank" href="Pdf/Trabajo Práctico 3ro 1ra LENGUA EIDFS.pdf">Descargar Trabajo Practico</a>
+                <br>Hacer el esquema pedido en clase
+                <br>Formular la idea para la exposicion del texto-
+                <br>de los romanos.
                 <br><br>Ingles:
-                <br>Llevar terminada la guia dada la clase anterior.
+                <br>Traer terminado el trabajo practico evaluativo.
+                <br><br>Geografia:
+                <br>Traer guia nº3 completa.
                 <br><br>Tutoria:
-                <br>Traer actividad 2 hecha
-                <br>Y traer de la pagina 8 la guia 3 completa.
+                <br>Traer actividad 4 hecha de la pag 9 y 10
                 <br><br>Miercoles:
                 <br><br>Dibujo Tecnico:
-                <br>Tratar de empezar la lamina nº2
-                <br><br>Matematica:
-                <br>Traer impresa la guia nº1 de matematica
+                <br>Llevar la lamina nº2 terminada.
                 <br><br>Tecnologia:
-                <br>Llevar hecha la actividad en grupos de 5
-                <br>que trata sobre sensores
+                <br>
                 <br><br>Jueves:
                 <br><br>Informatica:
-                <br>Traer resueltas las actividades dadas has-
-                <br>ta el punto 6.
-                <br><a target="_blank" href="Pdf/Guía Introduccion 3ro Div 3ra-4ta-6ta.pdf">Guia de Introduccion</a>
-                <br><a target="_blank" href="Pdf/Celda Activa-Rango de Celdas 3ro Div 3ra-4ta-6ta.pdf">Celda Activa-Rango de Celdas</a>
-                <br><a target="_blank" href="Pdf/Tipo de Datos 3ro Div 3ra-4ta-6ta.pdf">Tipos de Datos</a>
+                <br>
+                <br><br>Matematica:
+                <br>Evaluacion
                 <br><br>Quimica:
-                <br>Traer actividades que se dieron en cl-
-                <br>ases hechas.
+                <br>
                 <br><br>Taller Grupo 2:
-                <br>Llevar gafas de seguridad.
+                <br>Llevar cables pedidos en clase
                 <br><br>Viernes:
+                <br><br>Fisica:
+                <br>Hacer las actividades que se dieron-
+                <br>en clase.
                 <br><br>Teatro:
                 <br>Traer obra de teatro pedida en clase-
-                <br>hecha.</b></p>
+                <br>hecha.
+                <br>Traer respondidas las preguntas dadas-
+                <br>en clase.
+                <br>Hacer una maqueta con elementos recic-
+                <br>lables de no menos de 20x30cm.
+                <br>Traer 3 elementos:
+                <br>Por ejemplo:
+                <br>Tapado
+                <br>Sombrero
+                <br>Baston
+                <br>Paraguas.</b></p>
             <!-- <button id="notification" class="notifications"><p><b>Notificarme de Tareas</b></p></button> -->
             <a target="_blank" href="https://fotocomercio.mitiendanube.com"><button class="foto_title"><h3>Ir a fotocopiadora</h3></button></a>
             <br>
