--- a/index.html
+++ b/index.html
@@ -230,27 +230,28 @@
             <p class="danger_zone"><b>Avisos:
                 <br>Comprar cuaderno de comunicaciones
                 <br>rojo.
-                <br>Lunes Feriado
-                <br>Martes entramos a las 9:20 porque no vi-
-                <br>ene la profe de biologia
                 <br><br>Resumen Semanal:
+                <br><br>Lunes:
+                <br><br>Historia:
+                <br>Elaborar video pedido en clase.
+                <br><br>Geografia:
+                <br>Traer Guia nº3 completa.
                 <br><br>Martes:
+                <br><br>Biologia:
+                <br>Evaluacion el 9
                 <br><br>Lengua:
                 <br>Hacer el esquema pedido en clase
                 <br>Formular la idea para la exposicion del texto-
                 <br>de los romanos.
-                <br><br>Ingles:
-                <br>Traer terminado el trabajo practico evaluativo.
-                <br><br>Geografia:
-                <br>Traer guia nº3 completa.
-                <br><br>Tutoria:
-                <br>Traer actividad 4 hecha de la pag 9 y 10
                 <br><br>Miercoles:
-                <br><br>Dibujo Tecnico:
-                <br>Llevar la lamina nº2 terminada.
+                <br><br>Tecnologia:
+                <br>Hacer las actividades pedidas en clase
+                <br>Estudiar para la evaluacion del 10
                 <br><br>Jueves:
-                <br><br>Matematica:
-                <br>Evaluacion
+                <br><br>Informatica:
+                <br>Estudiar para leccion escrita.
+                <br><br>Quimica:
+                <br>Estudiar para evaluacion
                 <br><br>Taller Grupo 2:
                 <br>Llevar cables pedidos en clase
                 <br><br>Viernes:
@@ -258,18 +259,10 @@
                 <br>Hacer las actividades que se dieron-
                 <br>en clase.
                 <br><br>Teatro:
-                <br>Traer obra de teatro pedida en clase-
-                <br>hecha.
                 <br>Traer respondidas las preguntas dadas-
                 <br>en clase.
                 <br>Hacer una maqueta con elementos recic-
-                <br>lables de no menos de 20x30cm.
-                <br>Traer 3 elementos:
-                <br>Por ejemplo:
-                <br>Tapado
-                <br>Sombrero
-                <br>Baston
-                <br>Paraguas.</b></p>
+                <br>lables de no menos de 20x30cm.</b></p>
             <!-- <button id="notification" class="notifications"><p><b>Notificarme de Tareas</b></p></button> -->
             <a target="_blank" href="https://fotocomercio.mitiendanube.com"><button class="foto_title"><h3>Ir a fotocopiadora</h3></button></a>
             <br>
