Final_Week_Nº6_fixed

--- a/index.html
+++ b/index.html
@@ -230,10 +230,14 @@
             <p class="danger_zone"><b>Avisos:
                 <br>Comprar cuaderno de comunicaciones
                 <br>rojo.
+                <br>La profe de lengua el martes no viene.
                 <br><br>Resumen Semanal:
                 <br><br>Lunes:
                 <br><br>Historia:
                 <br>Elaborar video pedido en clase.
+                <br><br>Etica:
+                <br>Hacer actividades pedidas en el cuadernillo
+                <br>y el esquema.
                 <br><br>Geografia:
                 <br>Traer Guia nº3 completa.
                 <br><br>Martes:
