--- a/index.html
+++ b/index.html
@@ -230,43 +230,30 @@
             <p class="danger_zone"><b>Avisos:
                 <br>Comprar cuaderno de comunicaciones
                 <br>rojo.
-                <br>La profe de lengua el martes no viene.
                 <br><br>Resumen Semanal:
                 <br><br>Lunes:
                 <br><br>Historia:
-                <br>Elaborar video pedido en clase.
-                <br><br>Etica:
-                <br>Hacer actividades pedidas en el cuadernillo
-                <br>y el esquema.
+                <br>Hacer Guia
                 <br><br>Geografia:
-                <br>Traer Guia nº3 completa.
+                <br>Traer Guia nº4 completa.
                 <br><br>Martes:
                 <br><br>Biologia:
-                <br>Evaluacion el 9
+                <br>Hacer practico
                 <br><br>Lengua:
                 <br>Hacer el esquema pedido en clase
-                <br>Formular la idea para la exposicion del texto-
-                <br>de los romanos.
+                <br><br>Ingles:
+                <br>Evaluacion
+                <br><br>Tutoria:
+                <br>Hacer actividad 5
                 <br><br>Miercoles:
-                <br><br>Tecnologia:
-                <br>Hacer las actividades pedidas en clase
-                <br>Estudiar para la evaluacion del 10
-                <br><br>Jueves:
-                <br><br>Informatica:
-                <br>Estudiar para leccion escrita.
-                <br><br>Quimica:
+                <br><br>Dibujo Tecnico:
+                <br>Hacer lamina 3
                 <br>Estudiar para evaluacion
-                <br><br>Taller Grupo 2:
-                <br>Llevar cables pedidos en clase
-                <br><br>Viernes:
-                <br><br>Fisica:
-                <br>Hacer las actividades que se dieron-
-                <br>en clase.
-                <br><br>Teatro:
-                <br>Traer respondidas las preguntas dadas-
-                <br>en clase.
-                <br>Hacer una maqueta con elementos recic-
-                <br>lables de no menos de 20x30cm.</b></p>
+                <br><br>Tecnologia:
+                <br>Traer actividades hechas
+                <br><br>Jueves:
+                <br><br>Matematica:
+                <br>Estudiar para evaluacion.</b></p>
             <!-- <button id="notification" class="notifications"><p><b>Notificarme de Tareas</b></p></button> -->
             <a target="_blank" href="https://fotocomercio.mitiendanube.com"><button class="foto_title"><h3>Ir a fotocopiadora</h3></button></a>
             <br>
