--- a/index.html
+++ b/index.html
@@ -230,30 +230,24 @@
             <p class="danger_zone"><b>Avisos:
                 <br>Comprar cuaderno de comunicaciones
                 <br>rojo.
+                <br>Nueva preceptora Irene Guzman
+                <br>Jueves y Viernes feriado
                 <br><br>Resumen Semanal:
                 <br><br>Lunes:
                 <br><br>Historia:
-                <br>Hacer Guia
+                <br>Estudiar para evaluacion.
+                <br><br>Etica:
+                <br>Estudiar para evaluacion.
                 <br><br>Geografia:
-                <br>Traer Guia nº4 completa.
+                <br>Traer Guia nº5 completa.
                 <br><br>Martes:
                 <br><br>Biologia:
-                <br>Hacer practico
-                <br><br>Lengua:
-                <br>Hacer el esquema pedido en clase
-                <br><br>Ingles:
-                <br>Evaluacion
+                <br>Hacer actividad nº5
                 <br><br>Tutoria:
-                <br>Hacer actividad 5
+                <br>Hacer actividad 6
                 <br><br>Miercoles:
                 <br><br>Dibujo Tecnico:
-                <br>Hacer lamina 3
-                <br>Estudiar para evaluacion
-                <br><br>Tecnologia:
-                <br>Traer actividades hechas
-                <br><br>Jueves:
-                <br><br>Matematica:
-                <br>Estudiar para evaluacion.</b></p>
+                <br>Hacer lamina 3.</b></p>
             <!-- <button id="notification" class="notifications"><p><b>Notificarme de Tareas</b></p></button> -->
             <a target="_blank" href="https://fotocomercio.mitiendanube.com"><button class="foto_title"><h3>Ir a fotocopiadora</h3></button></a>
             <br>
