--- a/index.html
+++ b/index.html
@@ -228,26 +228,45 @@
             <button class="danger_title"><h3>¡¡Avisos Importantes!!</h3></button>
             <br>
             <p class="danger_zone"><b>Avisos:
-                <br>Comprar cuaderno de comunicaciones
-                <br>rojo.
-                <br>Nueva preceptora Irene Guzman
-                <br>Jueves y Viernes feriado
+                <br><br>Lunes y Martes feriado
+                <br>Todo lo dicho del lunes y-
+                <br>martes es para la semana-
+                <br>siguiente.
+                <br>Acordarse de los epp para-
+                <br>taller.
                 <br><br>Resumen Semanal:
                 <br><br>Lunes:
                 <br><br>Historia:
-                <br>Estudiar para evaluacion.
+                <br>Hacer podcast o tipo de-
+                <br>proyecto elegido.
                 <br><br>Etica:
-                <br>Estudiar para evaluacion.
+                <br>Hacer actividades pedidas-
+                <br>en clase.
                 <br><br>Geografia:
-                <br>Traer Guia nº5 completa.
+                <br>Estudiar para leccion-
+                <br>escrita.
                 <br><br>Martes:
                 <br><br>Biologia:
-                <br>Hacer actividad nº5
-                <br><br>Tutoria:
-                <br>Hacer actividad 6
+                <br>Buscar encefalo
+                <br><br>Lengua:
+                <br>...
                 <br><br>Miercoles:
                 <br><br>Dibujo Tecnico:
-                <br>Hacer lamina 3.</b></p>
+                <br>Hacer lamina 4
+                <br><br>Matematica:
+                <br>Estudiar para la evaluacion
+                <br><br>Tecnologia:
+                <br>Estudiar para la evaluacion
+                <br><br>Jueves:
+                <br><br>Informatica:
+                <br>Hacer hasta act 5 de la-
+                <br>guia 1
+                <br><br>Quimica:
+                <br>Hacer actividades pedidas-
+                <br>en clase.
+                <br><br>Viernes:
+                <br><br>Teatro:
+                <br>Hacer lo pedido en clase.</b></p>
             <!-- <button id="notification" class="notifications"><p><b>Notificarme de Tareas</b></p></button> -->
             <a target="_blank" href="https://fotocomercio.mitiendanube.com"><button class="foto_title"><h3>Ir a fotocopiadora</h3></button></a>
             <br>
