--- a/index.html
+++ b/index.html
@@ -229,14 +229,12 @@
             <br>
             <p class="danger_zone"><b>Avisos:
                 <br><br>Lunes y Martes feriado
-                <br>Todo lo dicho del lunes y-
-                <br>martes es para la semana-
-                <br>siguiente.
                 <br>Acordarse de los epp para-
                 <br>taller.
                 <br><br>Resumen Semanal:
                 <br><br>Lunes:
                 <br><br>Historia:
+                <br>Estudiar para evaluacion
                 <br>Hacer podcast o tipo de-
                 <br>proyecto elegido.
                 <br><br>Etica:
@@ -249,14 +247,13 @@
                 <br><br>Biologia:
                 <br>Buscar encefalo
                 <br><br>Lengua:
-                <br>...
+                <br>Hacer lo pedido en el audio
                 <br><br>Miercoles:
                 <br><br>Dibujo Tecnico:
                 <br>Hacer lamina 4
-                <br><br>Matematica:
-                <br>Estudiar para la evaluacion
                 <br><br>Tecnologia:
-                <br>Estudiar para la evaluacion
+                <br>Llevar materiales pedidos en-
+                <br>clase
                 <br><br>Jueves:
                 <br><br>Informatica:
                 <br>Hacer hasta act 5 de la-
@@ -266,7 +263,7 @@
                 <br>en clase.
                 <br><br>Viernes:
                 <br><br>Teatro:
-                <br>Hacer lo pedido en clase.</b></p>
+                <br>Hacer tarea</b></p>
             <!-- <button id="notification" class="notifications"><p><b>Notificarme de Tareas</b></p></button> -->
             <a target="_blank" href="https://fotocomercio.mitiendanube.com"><button class="foto_title"><h3>Ir a fotocopiadora</h3></button></a>
             <br>
