Final_Week_Nº11

--- a/index.html
+++ b/index.html
@@ -228,42 +228,42 @@
             <button class="danger_title"><h3>¡¡Avisos Importantes!!</h3></button>
             <br>
             <p class="danger_zone"><b>Avisos:
-                <br><br>Lunes y Martes feriado
-                <br>Acordarse de los epp para-
+                <br><br>Acordarse de los epp para-
                 <br>taller.
                 <br><br>Resumen Semanal:
                 <br><br>Lunes:
-                <br><br>Historia:
-                <br>Estudiar para evaluacion
-                <br>Hacer podcast o tipo de-
-                <br>proyecto elegido.
                 <br><br>Etica:
-                <br>Hacer actividades pedidas-
-                <br>en clase.
+                <br>Estudiar para la prueba
                 <br><br>Geografia:
-                <br>Estudiar para leccion-
-                <br>escrita.
+                <br>Hacer Guia del canva
                 <br><br>Martes:
                 <br><br>Biologia:
-                <br>Buscar encefalo
+                <br>Hacer el informe de la-
+                <br>practica de laboratorio
                 <br><br>Lengua:
-                <br>Hacer lo pedido en el audio
+                <br>Hacer actividades pedidas-
+                <br>en clase.
+                <br><br>Ingles:
+                <br>Hacer actividades pedidas-
+                <br>en clase.
+                <br><br>Tutoria:
+                <br>Hacer actividad 8
                 <br><br>Miercoles:
-                <br><br>Dibujo Tecnico:
-                <br>Hacer lamina 4
-                <br><br>Tecnologia:
-                <br>Llevar materiales pedidos en-
-                <br>clase
+                <br><br>
                 <br><br>Jueves:
                 <br><br>Informatica:
-                <br>Hacer hasta act 5 de la-
-                <br>guia 1
+                <br>Hacer actividades pedidas-
+                <br>en clase.
                 <br><br>Quimica:
                 <br>Hacer actividades pedidas-
                 <br>en clase.
+                <br>Traer guardapolvo para la-
+                <br>practica de laboratorio.
                 <br><br>Viernes:
-                <br><br>Teatro:
-                <br>Hacer tarea</b></p>
+                <br><br>Fisica:
+                <br>Hacer actividades.
+                <br>Practica de laboratorio.
+                <br></b></p>
             <!-- <button id="notification" class="notifications"><p><b>Notificarme de Tareas</b></p></button> -->
             <a target="_blank" href="https://fotocomercio.mitiendanube.com"><button class="foto_title"><h3>Ir a fotocopiadora</h3></button></a>
             <br>
