Final_Week_Nº7_FIXED

--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
                 <br><br>Informatica:
                 <br>Hacer actividades pedidas-
                 <br>en clase.
+                <br>Practica de info.
                 <br><br>Quimica:
                 <br>Hacer actividades pedidas-
                 <br>en clase.
