Final_Week_Nº10

--- a/index.html
+++ b/index.html
@@ -230,36 +230,27 @@
             <p class="danger_zone"><b>Avisos:
                 <br><br>Acordarse de los epp para-
                 <br>taller.
+                <br>Comenzaremos las clases el dia
+                <br>jueves 27/7
                 <br><br>Resumen Semanal:
                 <br><br>Lunes:
+                <br><br>Historia:
+                <br>Hacer tarea pedida en clase
                 <br><br>Etica:
                 <br>Estudiar para la prueba
-                <br><br>Geografia:
-                <br>Hacer Guia del canva
                 <br><br>Martes:
-                <br><br>Biologia:
-                <br>Hacer el informe de la-
-                <br>practica de laboratorio
                 <br><br>Lengua:
                 <br>Hacer actividades pedidas-
                 <br>en clase.
                 <br><br>Ingles:
                 <br>Hacer actividades pedidas-
                 <br>en clase.
-                <br><br>Tutoria:
-                <br>Hacer actividad 8
                 <br><br>Miercoles:
-                <br><br>
                 <br><br>Jueves:
-                <br><br>Informatica:
-                <br>Hacer actividades pedidas-
-                <br>en clase.
-                <br>Practica de info.
                 <br><br>Quimica:
-                <br>Hacer actividades pedidas-
-                <br>en clase.
-                <br>Traer guardapolvo para la-
-                <br>practica de laboratorio.
+                <br>Hacer resumen de laboratorio
+                <br><br>Taller:
+                <br>Traer informe
                 <br><br>Viernes:
                 <br><br>Fisica:
                 <br>Hacer actividades.
